Made tests run: jade is making a global variable (exportscoffeeScript) which is stopping the tests.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "express": "3.x"
   },
   "scripts": {
-    "test": "make test"
+    "test": "make test-verbose"
   },
   "repository": {
     "type": "git",
